@@ -2086,7 +2086,7 @@ multisite_builtin_views.update({
                                          ('is_host_notifications_enabled',
                                           '-1'),
                                          ('is_summary_host', '0')],
-                     'hidden': False,
+                     'hidden': True,
                      'hide_filters': [],
                      'hidebutton': True,
                      'layout': 'table',
@@ -2147,7 +2147,7 @@ multisite_builtin_views.update({
                                        ('st3', 'on'),
                                        ('stp', ''),
                                        ('is_in_downtime', '-1')],
-                   'hidden': False,
+                   'hidden': True,
                    'hide_filters': [],
                    'hidebutton': True,
                    'layout': 'table',
