@@ -46,7 +46,7 @@ multisite_builtin_views.update({
                                       ('is_host_acknowledged', '0'),
                                       ('is_summary_host', '0'),
                                       ],
-                  'hidden': False,
+                  'hidden': True,
                   'hidebutton': True,
                   'hide_filters': [],
                   'layout': 'table',
@@ -98,7 +98,7 @@ multisite_builtin_views.update({
                                      ('hst2', ''),
                                      ('hstp', 'on'),
                                      ('is_summary_host', '0')],
-                 'hidden': False,
+                 'hidden': True,
                  'hide_filters': [],
                  'layout': 'table',
                  'mustsearch': False,
@@ -135,7 +135,7 @@ multisite_builtin_views.update({
                                 ('logtime_from_range', '3600'),
                                 ('logtime_from', '4'),
                                 ],
-            'hidden': False,
+            'hidden': True,
             'hide_filters': [],
             'layout': 'table',
             'linktitle': 'Events',
