@@ -188,6 +188,7 @@
     * 0569 FIX: recurring updates of serial numbers of disabled ldap users fixed...
     * 0676 FIX: Move view "Stale services" to Problems folder
     * 0270 FIX: Multisite host tag filter: Now uses exact match...
+    * 0273 FIX: Fixed exceptions when modifying / cloning views...
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
